# OpenOats

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
.github/scripts/: consolidate_coverage.py
.github/workflows/: mac-release.yml  pull-request.yml  release-dmg.yml  release.yml  ubuntu-release.yml  windows-release.yml
OpenOats/: Cargo.toml
OpenOats/OpenOatsTauri/src/: App.css  App.tsx  OverlayApp.tsx  main.tsx  theme.ts  types.ts
OpenOats/OpenOatsTauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
OpenOats/OpenOatsTauri/src-tauri/capabilities/: default.json
OpenOats/OpenOatsTauri/src-tauri/src/: audio_macos.rs  audio_windows.rs  engine.rs  lib.rs  transcriber.rs
OpenOats/crates/openoats-core/: Cargo.toml
crates/opencassava-core/: Cargo.toml
crates/opencassava-core/src/: keychain.rs  lib.rs  models.rs  process_control.rs  settings.rs
docs/: lm-studio-setup.md
docs/plans/: 2026-03-02-swiftui-rewrite-design.md  2026-03-02-swiftui-rewrite-plan.md
docs/superpowers/plans/: 2026-03-20-repo-restructure.md  2026-03-25-frequency-domain-aec.md
docs/superpowers/specs/: 2026-03-18-multiplatform-design.md  (+6 more)
opencassava/: README.md  eslint.config.js  package-lock.json  package.json
opencassava/scripts/: prepare-whisper.ps1  run-tauri.mjs
opencassava/src/: App.tsx  OverlayApp.tsx  hotkeys.ts  transcriptCommands.ts  types.ts
opencassava/src-tauri/: Cargo.toml  tauri.conf.json
tools/: compare-parakeet-cpu-bench.ps1  parakeet-benchmark-manifest.example.jsonl  run-parakeet-cpu-bench.ps1  show-parakeet-cpu-bench.ps1
(+69 files in other folders)
